# rust-project

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/messageIO/: messages.rs
src/modules/: app_state.rs  event_handler.rs  message_bubble.rs  networking.rs  peer_list.rs  peer_state.rs  protocol.rs  tui.rs
src/modules/widgets/: list_component.rs  message_bubble.rs  peer_bubble.rs
tests/: protocol.rs  serialization.rs  simple_connection.rs
