[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
log = "0.4"
rand = "0.8.5"
once_cell = "1.20.2"
lazy_static = "1.5.0"
socket2 = "0.5.8"
env_logger = "0.11.5"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
cli-log = "2.1.0"
