[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.83"
rand = "0.8.5"
once_cell = "1.20.2"
socket2 = "0.5.8"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
cli-log = "2.1.0"
textwrap = { version = "0.16.1", features = ["unicode-width"] }
unicode-width = "0.2.0"
tui-textarea = "0.7.0"
humansize = "2.1.3"
directories = "5.0.1"
copypasta = "0.10.1"

[dev-dependencies]
ntest = "0.9"
tempfile = "3.14"